add init user password